<resources>
    <string name="app_name">Weatherly</string>
    <string name="welcome_message">Welcome To Weatherly</string>
    <string name="instructions">Note:\nEnter the city\'s name to find out the weather</string>
    <string name="city_name">City name</string>
    <string name="find_weather">Find Weather</string>
    <string name="cityname">Enter City Name</string>
    <string name="weather_report">Weather Report</string>
    <string name="weather_picture">Weather Picture</string>
    <string name="city_not_found">City Not Found</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_internet">No Internet!</string>
</resources>